remove map-active z-index to fix bug#1

--- a/client/styles/map-markers.scss
+++ b/client/styles/map-markers.scss
@@ -4,7 +4,7 @@ $leaflet-popup-radius: 5px;
 // Map active centers map
 .map-active{
   position: absolute;
-  z-index: 25;
+  //z-index: 25;
   //border: 3px solid #000;
   top: 0;
   right: 0;
